vbnc/vbnc/tests/Errors/30452.vb
Option Strict On
Class A
    Shared Sub Main()
        Dim a As Date
        Dim b As Date
        b = a + 2
    End Sub
End Class